--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,10 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0",
+        "php": "^7.4|^8.0|^8.1",
         "spatie/laravel-package-tools": "^1.13.0",
-        "illuminate/filesystem": "^7.0|^8.0|^9.0",
-        "illuminate/support": "^7.0|^8.0|^9.0"
+        "illuminate/filesystem": "^7.0|^8.0|^9.0|^10.0",
+        "illuminate/support": "^7.0|^8.0|^9.0|^10.0"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
